[package]
name = "herbert"
version = "0.1.0"
description = "simple actor management"
authors = ["colvin <39858617+colvin@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/colvin/herbert"
documentation = "https://docs.rs/crate/herbert"
categories = ["asynchronous", "concurrency"]
keywords = ["actor", "router", "message"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4"
log = "*"

[dev-dependencies]
chrono = "*"
fern = "*"
